--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Account/Login.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
+    string sorry = "Username";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -15,7 +16,8 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+                    @* @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })*@
+                    &nbsp;&nbsp;&nbsp;@Html.Label("Username")
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
