moved review of systems on all relevant pages to the right of general patient info to fill screen better and consolidate

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 		</p>
 		<img src="~/Images/Burdell.JPG" alt="Picture of Burdell." style="width:130px;height:150px;" />
 		<p>
-			Researcher- Burdell Fitzgerald
+			Researcher- C. Burdell FitzGerald
 		</p>
 	</div>
 
