--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Delete.cshtml
@@ -18,160 +18,167 @@
         <div>
             <h4>Patient @Html.DisplayFor(model => model.patientID)</h4>
             <hr />
+            <div class="row">
+                <div class="col-md-5">
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Sex)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Sex)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Married)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Married)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Age)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Age)
+                        </dd>
+
+                        <dt>
+                            Classification
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.HistologicalClassification)
+                        </dd>
+
+                        <dt>
+                            Grade (WHO)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.HistologicalGrade)
+                        </dd>
+
+                        <dt>
+                            Tumor Size (WxHxL)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.TumorWidth)
+                            x
+                            @Html.DisplayFor(model => model.TumorHeight)
+                            x
+                            @Html.DisplayFor(model => model.TumorLength)
+                        </dd>
+
+                        @*<dt>
+                            @Html.DisplayNameFor(model => model.TumorHeight)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.TumorHeight)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.TumorLength)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.TumorLength)
+                        </dd>*@
+
+                        <dt>
+                            Location
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.TumorLocation)
+                        </dd>
+                    </dl>
+                </div>
+                <div class="col-md-5">
+                    <dl class="dl-horizontal">
+                        <dt>
+                            Review of Systems
+                        </dt><dd></dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Constitutional)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Constitutional)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Respiratory)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Respiratory)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Cardiovascular)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Cardiovascular)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Gastrointestinal)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Gastrointestinal)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Musculoskeletal)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Musculoskeletal)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Integumentary)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Integumentary)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Neurologic)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Neurologic)
+                        </dd>
+
+                        <dt>
+                            Exercise
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Exercize)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Diet)
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Diet)
+                        </dd>
+                    </dl>
+                </div>
+            </div>
             <dl class="dl-horizontal">
                 <dt>
-                    @Html.DisplayNameFor(model => model.Sex)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Sex)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Married)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Married)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Age)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Age)
-                </dd>
-
-                <dt>
-                    Classification
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.HistologicalClassification)
-                </dd>
-
-                <dt>
-                    Grade (WHO)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.HistologicalGrade)
-                </dd>
-
-                <dt>
-                    Tumor Size (WxHxL)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.TumorWidth)
-                    x
-                    @Html.DisplayFor(model => model.TumorHeight)
-                    x
-                    @Html.DisplayFor(model => model.TumorLength)
-                </dd>
-
-                @*<dt>
-                        @Html.DisplayNameFor(model => model.TumorHeight)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.TumorHeight)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.TumorLength)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.TumorLength)
-                    </dd>*@
-
-                <dt>
-                    Location
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.TumorLocation)
-                </dd>
-
-                <dt>
-                    <br />
-                    <br />Review of Systems<br /><br />
-
-                    @Html.DisplayNameFor(model => model.Constitutional)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Constitutional)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Respiratory)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Respiratory)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Cardiovascular)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Cardiovascular)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Gastrointestinal)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Gastrointestinal)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Musculoskeletal)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Musculoskeletal)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Integumentary)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Integumentary)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Neurologic)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Neurologic)
-                </dd>
-
-                <dt>
-                    Exercise
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Exercize)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Diet)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Diet)
-                </dd>
-
-                <dt>
-                    <br />
                     Symptoms
                 </dt>
 
